<resources>
    <string name="app_name">ninja Chat</string>
    <string name="need_a_new_account">Need a new account ?</string>
    <string name="welcome_to_ninjachat">Welcome to ninjaChat</string>
    <string name="password">Password</string>
    <string name="email">email</string>
    <string name="display_name">Display Name</string>
    <string name="create_account">Create Account</string>
    <string name="this_is_our_main_page">This is our main page</string>
    <string name="logout">Logout</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_name">Your Name</string>
    <string name="status">Status</string>
    <string name="change_name">Change Name</string>
    <string name="change_status">change status</string>
    <string name="your_status">Your Status</string>
    <string name="save_changes">Save Changes</string>
    <string name="change_image">Change image</string>
    <string name="textview">TextView</string>
</resources>
