<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nishantvarshney.ninjachat.RegisterActivity">

    <include layout="@layout/app_bar_layout" android:id="@+id/reg_toolbar"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/reg_displayName"
        android:layout_width="329dp"
        android:layout_height="58dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.307">

        <EditText
            android:id="@+id/editText6"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/display_name"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="562dp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/reg_createAc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="456dp"
        android:background="#5d17f4"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.892"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/reg_emailName"
        android:layout_width="324dp"
        android:layout_height="59dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/reg_displayName"
        app:layout_constraintStart_toStartOf="@+id/reg_displayName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.525">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/reg_password"
        android:layout_width="324dp"
        android:layout_height="59dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="288dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/reg_emailName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/reg_emailName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.367">

        <EditText
            android:id="@+id/editText7"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="-19dp" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/text_createAC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="monospace"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:text="Create Your Account"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_toolbar"
        app:layout_constraintVertical_bias="0.063"
        tools:textColor="@android:color/black" />

</android.support.constraint.ConstraintLayout>
